--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -1,14 +1,14 @@
 modLoader="javafml"
 loaderVersion="[1,)"
-issueTrackerURL="https://github.com/owmii/powah/issues"
+issueTrackerURL="https://github.com/Technici4n/Powah/issues"
 license="LGPLv3"
 
 [[mods]]
 modId="powah"
 version="0.0.0"
 displayName="Powah"
-displayURL="https://www.curseforge.com/minecraft/mc-mods/powah"
-authors="owmii,Technici4n,shartte"
+displayURL="https://www.curseforge.com/minecraft/mc-mods/powah-rearchitected"
+authors="Technici4n"
 description='''
 Various ways to generate, store and transmit FE power.
 '''
