--- a/src/main/resources/META-INF/neoforge.mods.toml
+++ b/src/main/resources/META-INF/neoforge.mods.toml
@@ -8,7 +8,7 @@ modId="powah"
 version="0.0.0"
 displayName="Powah"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/powah-rearchitected"
-authors="Technici4n"
+authors="owmii,Technici4n,shartte"
 description='''
 Various ways to generate, store and transmit FE power.
 '''
